Closed
Bug 1319072
Opened 9 years ago
Closed 9 years ago
Assertion failure: aCoeff >= 0.0 && aCoeff <= 1.0 (Coefficient should be in the range [0.0, 1.0]), atnsStyleTransformMatrix.cpp:332
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla53
| Tracking | Status | |
|---|---|---|
| firefox53 | --- | fixed |
People
(Reporter: cbook, Unassigned)
References
()
Details
(Keywords: assertion)
Attachments
(2 files)
found by bughunter and reproduced on latest win trunk debug tinderbox build.
Steps to reproduce:
-> Load http://www.premiumoutlets.com/outlet/chicago/stores
---> wait some seconds
-----> Assertion failure: aCoeff >= 0.0 && aCoeff <= 1.0 (Coefficient should be in the range [0.0, 1.0]), at c:/builds/moz2_slave/m-cen-w32-d-000000000000000000/build/src/layout/style/nsStyleTransformMatrix.cpp:332
debug trunk only - so seems a recent regression - maybe from bug 1304886 ?
Comment 2•9 years ago
|
||
That's right. I am totally missing some easing functions produce values greater than 1.0. But hmm, what should we do for such values? gfxQuaternion::Slerp clamps the values, it seems that we can't get plausible interpolated values.
Blocks: 1304886
Flags: needinfo?(hiikezoe)
Comment 3•9 years ago
|
||
Files a spec issue. https://github.com/w3c/csswg-drafts/issues/744
| Comment hidden (mozreview-request) |
Comment 5•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8812958 [details]
Bug 1319072 - Don't assert even if coefficient is out of range [0, 1].
https://reviewboard.mozilla.org/r/94492/#review94810
Removing the assertions looks good to me.
Attachment #8812958 -
Flags: review?(boris.chiou) → review+
Pushed by hiikezoe@mozilla-japan.org:
https://hg.mozilla.org/integration/autoland/rev/1f8649133d7c
Don't assert even if coefficient is out of range [0, 1]. r=boris
Comment 7•9 years ago
|
||
| Reporter | ||
Comment 8•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in
before you can comment on or make changes to this bug.
Description
•