Bug 1319072 - Don't assert even if coefficient is out of range [0, 1]. r=boris

MozReview-Commit-ID: 6TnuoNnHcSc